apps/demoapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
  namespace: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      imagePullSecrets:
        - name: ecr-creds
      containers:
        - name: demoapp
          image: 478047323853.dkr.ecr.us-east-1.amazonaws.com/demoapp:34fbd678925999f94ec90d4ce6f2675ebb1eef2f
          ports:
            - containerPort: 5000
