apps/demoapp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
  namespace: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      imagePullSecrets:
        - name: ecr-creds
      containers:
        - name: demoapp
          image: 478047323853.dkr.ecr.us-east-1.amazonaws.com/demoapp:be5aa4910394dec2d9110c98690e0587ab5474de
          ports:
            - containerPort: 5000
