apps/demoapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
  namespace: demoapp
spec:
  selector:
    app: demoapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
