apps/demoapp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp
  namespace: demoapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - demoapp.codepretzels.com
      secretName: demoapp-tls
  rules:
    - host: demoapp.codepretzels.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoapp
                port:
                  number: 80
